Corrected z-index of certificate card

--- a/styles.css
+++ b/styles.css
@@ -531,6 +531,7 @@ a.experience-card-text:hover {
     
     #experience-certificates {
         transform: translate(5rem, -25rem) rotate(10deg);
+        z-index: 4;
     }
     
     #experience-certificates:hover {
